--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
-"scripts": {
-  "start": "yarn run build && node dist/index.js",
-  "build": "npx tsc",
-  "start:dev": "ts-node-dev index.ts"
+{
+  "name": "lametric-cardinals-record",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "yarn run build && node dist/index.js",
+    "build": "npx tsc",
+    "start:dev": "ts-node-dev index.ts"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.11",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.3"
+  }
 }
